--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://18.224.6.245:5000/"
 }
